--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: Static Site Generator tests
 on:
   push:
     branches: [ master ]
-  pull_requests:
+  pull_request:
     branches: [ master ]
 jobs:
   build:
